--- a/blog/blog.csproj
+++ b/blog/blog.csproj
@@ -26,6 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ViewComponents\" />
+    <Folder Include="Views\Shared\Components\" />
     <Folder Include="wwwroot\Resimler\ReferansResim\" />
   </ItemGroup>
 
